INU 2019 Open contest

--- a/_posts/2019-12-28-BOJ-INU.md
+++ b/_posts/2019-12-28-BOJ-INU.md
@@ -1,20 +1,7 @@
 ---
 title: "[BOJ] INU 송년 코드페스티벌 2019 Open Contest"
-categories:
-    - PS
-tags:
-    - BOJ
-    - 백준
-    - INU
-    - 인천대
-    - 18228
-    - 18229
-    - 18230
-    - 18231
-    - 18232
-    - 18233
-    - 18234
-    - 18235
+categories: [PS]
+tags: [BOJ, 백준, 인천대, 18228번, 18229번, 18230번, 18231번, 18232번, 18233번, 18234번, 18235번]
 ---
 
 # [18228번: 펭귄추락대책위원회](https://www.acmicpc.net/problem/18228)
