--- a/_posts/2019-12-28-BOJ-INU.md
+++ b/_posts/2019-12-28-BOJ-INU.md
@@ -177,8 +177,8 @@ ex)
 
 output: -1
 ```
-
 <br>
+
 ## 코드
 
 ``` java
@@ -296,4 +296,98 @@ class FastIO { ... }    // 생략
 <br>
 <br>
 
-# [18231번: 파괴된 도시](https://www.acmicpc.net/problem/18231)
+# [18232번: 텔레포트 정거장](https://www.acmicpc.net/problem/18232)
+## 풀이
+
+ 텔레포트할 수 있는 정거장을 인접리스트로 표현한다.<br>
+S가 E에 도달할 때까지 BFS를 진행한다.
+- cur - 1, cur + 1에 대하여 BFS
+- 텔레포트 정거장에 대하여 BFS
+<br>
+최종적으로 걸린 시간(cnt)를 출력한다.<br>
+
+## 코드
+
+``` java
+import java.io.*;
+import java.util.*;
+
+public class Main {
+
+    static FastIO io = new FastIO();
+    static List<List<Integer>> adj;
+    static boolean[] visited;
+    static int[] dx = {-1, 1};
+    static int N, M, S, E, x, y;
+
+    public static void main(String... args) throws IOException {
+        N = io.nextInt();
+        M = io.nextInt();
+        S = io.nextInt();
+        E = io.nextInt();
+        adj = new ArrayList<>(N + 1);
+        for (int i = 0; i < N + 1; i++) {
+            adj.add(new ArrayList<>());
+        }
+        visited = new boolean[N + 1];
+        for (int i = 0; i < M; i++) {
+            x = io.nextInt();
+            y = io.nextInt();
+            adj.get(x).add(y);
+            adj.get(y).add(x);
+        }
+
+        io.write(BFS());
+    }
+
+    private static int BFS() {
+        Queue<Node> queue = new LinkedList<>();
+        queue.add(new Node(S, 0));
+        visited[S] = true;
+
+        while (!queue.isEmpty()) {
+            Node tmp = queue.poll();
+            int cur = tmp.idx;
+            int cnt = tmp.cnt;
+
+            if (cur == E)
+                return cnt;
+
+            for (int i = 0; i < 2; i++) {
+                int nx = cur + dx[i];
+
+                if (nx < 1 || nx > N || visited[nx])
+                    continue;
+
+                visited[nx] = true;
+                queue.add(new Node(nx, cnt + 1));
+            }
+
+            for (Integer i : adj.get(cur)) {
+                if (!visited[i]) {
+                    visited[i] = true;
+                    queue.add(new Node(i, cnt + 1));
+                }
+            }
+        }
+
+        return -1;
+    }
+
+}
+
+class Node {
+    int idx, cnt;
+
+    public Node(int idx, int cnt) {
+        this.idx = idx;
+        this.cnt = cnt;
+    }
+}
+
+class FastIO { ... }    // 생략
+```
+
+<br>
+<br>
+
