--- a/_posts/2019-12-28-BOJ-INU.md
+++ b/_posts/2019-12-28-BOJ-INU.md
@@ -391,3 +391,94 @@ class FastIO { ... }    // 생략
 <br>
 <br>
 
+# [18233번: 러버덕을 사랑하는 모임](https://www.acmicpc.net/problem/18233)
+
+<br>
+<br>
+
+# [18234번: 당근 훔쳐 먹기](https://www.acmicpc.net/problem/18234)
+
+<br>
+<br>
+
+# [18235번: 지금 만나러 갑니다](https://www.acmicpc.net/problem/18235)
+## 풀이
+1. A와 B가 한 턴씩 움직이게 큐에 넣어준다.
+> 또는 A, B 순서 상관없이 cnt의 오름차순으로 우선순위 큐에 넣어준다.
+2. BFS를 진행하고 결과를 출력한다.
+
+
+## 코드
+
+``` java
+import java.io.*;
+import java.util.*;
+
+public class Main {
+
+    static FastIO io = new FastIO();
+    static int N, A, B;
+    static int[] visitedA, visitedB;
+    static int[] dx = {-1, 1};
+
+    public static void main(String... args) throws IOException {
+        N = io.nextInt();
+        A = io.nextInt();
+        B = io.nextInt();
+        visitedA = new int[N + 1];
+        visitedB = new int[N + 1];
+        Arrays.fill(visitedA, -1);
+        Arrays.fill(visitedB, -1);
+        io.write(BFS());
+    }
+
+    private static int BFS() {
+        Queue<Node> queue = new LinkedList<>();
+        queue.add(new Node(A, 0, true));
+        queue.add(new Node(B, 0, false));
+        visitedA[A] = 0;
+        visitedB[B] = 0;
+
+        while (!queue.isEmpty()) {
+            Node tmp = queue.poll();
+            int cur = tmp.idx;
+            int cnt = tmp.cnt;
+            boolean flag = tmp.flag;
+
+            if (visitedA[cur] == visitedB[cur] && visitedB[cur] > -1)
+                return visitedB[cur];
+
+            for (int i = 0; i < 2; i++) {
+                int next = cur + dx[i] * (1 << cnt);
+
+                if (next < 1 || next > N)
+                    continue;
+
+                if (flag)
+                    visitedA[next] = cnt + 1;
+
+                else
+                    visitedB[next] = cnt + 1;
+
+                queue.add(new Node(next, cnt + 1, flag));
+            }
+        }
+
+        return -1;
+    }
+
+}
+
+class Node {
+    int idx, cnt;
+    boolean flag;
+
+    public Node(int idx, int cnt, boolean flag) {
+        this.idx = idx;
+        this.cnt = cnt;
+        this.flag = flag;
+    }
+}
+
+class FastIO { ... }    // 생략
+```
