--- a/_posts/2019-12-28-BOJ-INU.md
+++ b/_posts/2019-12-28-BOJ-INU.md
@@ -392,7 +392,93 @@ class FastIO { ... }    // 생략
 <br>
 
 # [18233번: 러버덕을 사랑하는 모임](https://www.acmicpc.net/problem/18233)
+## 풀이
 
+1. **백트래킹**으로 P명의 조합을 구하여 모든 경우의 수를 다 따져본다. 
+2. P명의 조합을 완성했을 때 나올 수 있는 구간 `[min, max]`에 E가 속한다면 인형을 선물할 수 있다.
+3. E에서 P명의 최솟값을 빼면서 동시에 정답 배열에 저장하고 E의 나머지를 정답배열에 적절히 분배하여 출력한다.
+4. 단 한번도 `[min, max]`구간에 E가 속하지 않았으면 -1을 출력한다.
+
+
+## 코드
+
+``` java
+import java.io.*;
+import java.util.*;
+
+public class Main {
+
+    static FastIO io = new FastIO();
+    static int N, P, E;
+    static int[][] arr;
+    static LinkedList<Integer> idxList;
+    static boolean flag = false;
+    static StringBuilder res = new StringBuilder();
+
+    public static void main(String... args) throws IOException {
+        N = io.nextInt();
+        P = io.nextInt();
+        E = io.nextInt();
+        arr = new int[N + 1][2];
+        idxList = new LinkedList<>();
+        for (int i = 1; i < N + 1; i++) {
+            arr[i][0] = io.nextInt();
+            arr[i][1] = io.nextInt();
+        }
+
+        func(0, 0, 0);
+        io.write(res.append(flag ? "" : -1));
+    }
+
+    private static void func(int min, int max, int idx) {
+        if (flag)
+            return;
+        else if (idxList.size() == P) {
+            int[] ans = new int[N + 1];
+
+            if (min <= E && E <= max) {
+                for (Integer i : idxList) {
+                    ans[i] = arr[i][0];
+                    E -= ans[i];
+                }
+
+                for (int i = 0; i < N + 1 && E > 0; i++) {
+                    if (ans[i] > 0) {
+                        int diff = arr[i][1] - arr[i][0];
+
+                        if (diff >= E) {
+                            ans[i] += E;
+                            E = 0;
+                        }
+                        else {
+                            ans[i] += diff;
+                            E -= diff;
+                        }
+                    }
+                }
+
+                for (int i = 1; i < N + 1; i++) {
+                    res.append(ans[i]).append(' ');
+                }
+                flag = true;
+            }
+            return;
+        }
+        else if (idx + 1 > N)
+            return;
+
+        // 현재 미포함
+        func(min, max, idx + 1);
+        // 현재 포함
+        idxList.add(idx + 1);
+        func(min + arr[idx + 1][0], max + arr[idx + 1][1], idx + 1);
+        idxList.pollLast();
+    }
+
+}
+
+class FastIO { ... }    // 생략
+```
 <br>
 <br>
 
