--- a/_posts/2020-01-05-Test2.md
+++ b/_posts/2020-01-05-Test2.md
@@ -1,10 +1,10 @@
 ---
-title: "Test2"
-excerpt: "Test2"
+title: "[Django] Pycharm에서 Django 프로젝트 생성하기"
+excerpt: "Pycharm Community Edition으로 Django 프레임워크 프로젝트 생성"
 toc: true
 toc_sticky: true
 categories: [Web]
-tags: []
+tags: [Web, Django, Python, Pycharm, Pycharm Community Edition]
 ---
 
 ## [18221번: 교수님 저는 취업할래요](https://www.acmicpc.net/problem/18221)
