--- a/_posts/2020-02-18-16.md
+++ b/_posts/2020-02-18-16.md
@@ -1,8 +1,8 @@
 ---
 title: "[BOJ] 수열과 쿼리 17"
 excerpt: "최솟값 세그먼트 트리로 풀 수 있는 수열과 쿼리"
-toc: true
-toc_sticky: true
+# toc: true
+# toc_sticky: true
 categories: [PS]
 tags: [PS, 11438번, 수열과 쿼리 17, 세그먼트 트리, JAVA]
 use_math: true
@@ -10,10 +10,10 @@ use_math: true
 
 ## [11438번: 수열과 쿼리 17](https://www.acmicpc.net/problem/11438)
 
-최소값을 저장하는 세그먼트 트리를 구성한다. <br>
+최솟값을 저장하는 세그먼트 트리를 구성한다. <br>
 
 - 1번 쿼리에는 값을 업데이트 한다.
-- 2번 쿼리에는 해당 구간에 대해 최소값을 리턴하는 쿼리를 던진다.
+- 2번 쿼리에는 해당 구간에 대해 최솟값을 리턴하는 쿼리를 던진다.
 
 ```java
 import java.io.*;
