--- a/_posts/2020-02-18-17.md
+++ b/_posts/2020-02-18-17.md
@@ -1,8 +1,8 @@
 ---
 title: "[BOJ] 수열과 쿼리 22"
 excerpt: "오프라인 쿼리로 풀 수 있는 수열과 쿼리"
-toc: true
-toc_sticky: true
+# toc: true
+# toc_sticky: true
 categories: [PS]
 tags: [PS, 16978번, 수열과 쿼리 22, 오프라인 쿼리, 세그먼트 트리, JAVA]
 use_math: true
