--- a/_posts/2020-02-19-20.md
+++ b/_posts/2020-02-19-20.md
@@ -1,8 +1,8 @@
 ---
 title: "[BOJ] 수열과 쿼리 3"
 excerpt: "머지 소트 트리로 풀 수 있는 수열과 쿼리"
-toc: true
-toc_sticky: true
+# toc: true
+# toc_sticky: true
 categories: [PS]
 tags: [PS, 13544번, 수열과 쿼리 3, 세그먼트 트리, 머지 소트 트리, JAVA]
 use_math: true
