--- a/_posts/2020-02-17-15.md
+++ b/_posts/2020-02-17-15.md
@@ -1,8 +1,8 @@
 ---
 title: "[BOJ] 수열과 쿼리 16"
 excerpt: "구간의 최소 인덱스를 저장하는 세그먼트 트리로 풀 수 있는 수열과 쿼리"
-toc: true
-toc_sticky: true
+# toc: true
+# toc_sticky: true
 categories: [PS]
 tags: [PS, 11428번, 수열과 쿼리 16, 세그먼트 트리, JAVA]
 use_math: true
