--- a/_posts/2020-02-17-14.md
+++ b/_posts/2020-02-17-14.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 수열과 쿼리 15"
+title: "[BOJ] 11427 수열과 쿼리 15"
 excerpt: "TreeSet, 세그먼트 트리로 풀 수 있는 수열과 쿼리"
 toc: true
 toc_sticky: true
