--- a/_posts/2020-02-21-22.md
+++ b/_posts/2020-02-21-22.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 수열과 쿼리 24"
+title: "[BOJ] 17408 수열과 쿼리 24"
 excerpt: "최댓값과 인덱스를 저장하는 세그먼트 트리로 풀 수 있는 수열과 쿼리"
 # toc: true
 # toc_sticky: true
