--- a/_posts/2020-02-18-16.md
+++ b/_posts/2020-02-18-16.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 수열과 쿼리 17"
+title: "[BOJ] 11438 수열과 쿼리 17"
 excerpt: "최솟값 세그먼트 트리로 풀 수 있는 수열과 쿼리"
 # toc: true
 # toc_sticky: true
