--- a/_posts/2020-02-18-18.md
+++ b/_posts/2020-02-18-18.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 수열과 쿼리 37"
+title: "[BOJ] 18436 수열과 쿼리 37"
 excerpt: "홀짝 여부를 저장하는 세그먼트 트리로 풀 수 있는 수열과 쿼리"
 # toc: true
 # toc_sticky: true
