--- a/_posts/2020-02-19-21.md
+++ b/_posts/2020-02-19-21.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 수열과 쿼리 21"
+title: "[BOJ] 16975 수열과 쿼리 21"
 excerpt: "Lazy Propagation으로 풀 수 있는 수열과 쿼리"
 # toc: true
 # toc_sticky: true
