--- a/_posts/2019-12-28-1.md
+++ b/_posts/2019-12-28-1.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] INU 송년 코드페스티벌 2019 Open Contest"
+title: "INU 송년 코드페스티벌 2019 Open Contest"
 excerpt: "INU 송년 코드 페스티벌 풀이 및 코드"
 toc: true
 toc_sticky: true
