--- a/_posts/2019-12-31-3.md
+++ b/_posts/2019-12-31-3.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 2019 Overflow Programming Contest (OPC)"
+title: "2019 Overflow Programming Contest (OPC)"
 excerpt: "2019 Overflow Programming Contest (OPC) 풀이 및 코드"
 toc: true
 toc_sticky: true
