--- a/_posts/2020-01-06-5.md
+++ b/_posts/2020-01-06-5.md
@@ -1,5 +1,5 @@
 ---
-title: "[Django] Django의 애플리케이션 개발 방식"
+title: "Django의 애플리케이션 개발 방식"
 excerpt: "Django의 애플리케이션 개발 방식"
 toc: true
 toc_sticky: true
