--- a/_posts/2020-01-18-9.md
+++ b/_posts/2020-01-18-9.md
@@ -1,5 +1,5 @@
 ---
-title: "[Algorithm] 이분탐색과 Parametric Search"
+title: "이분탐색과 Parametric Search"
 excerpt: "단순한 탐색보다 더 빠르게 찾는 탐색 알고리즘에 대해 알아보자."
 toc: true
 toc_sticky: true
