--- a/_posts/2020-02-06-13.md
+++ b/_posts/2020-02-06-13.md
@@ -1,5 +1,5 @@
 ---
-title: "[Algorithm] Inversion Counting"
+title: "Inversion Counting"
 excerpt: "역순의 개수를 구하는 알고리즘 Inversion Counting을 알아보자."
 toc: true
 toc_sticky: true
