--- a/_posts/2020-02-17-15.md
+++ b/_posts/2020-02-17-15.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 11428 수열과 쿼리 16"
+title: "백준 11428 수열과 쿼리 16"
 excerpt: "구간의 최소 인덱스를 저장하는 세그먼트 트리로 풀 수 있는 수열과 쿼리"
 # toc: true
 # toc_sticky: true
