--- a/_posts/2020-02-23-23.md
+++ b/_posts/2020-02-23-23.md
@@ -1,5 +1,5 @@
 ---
-title: "[Algorithm] 2의 거듭제곱 판별법"
+title: "2의 거듭제곱 판별법"
 excerpt: "O(1)에 2의 거듭제곱인지 판별하는 알고리즘을 알아보자."
 # toc: true
 # toc_sticky: true
