--- a/_posts/2020-03-03-25.md
+++ b/_posts/2020-03-03-25.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 18437 회사 문화 5"
+title: "백준 18437 회사 문화 5"
 excerpt: "오일러 투어 테크닉으로 세그먼트 트리로 변환하는 문제"
 # toc: true
 # toc_sticky: true
