--- a/_posts/2020-01-08-6.md
+++ b/_posts/2020-01-08-6.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 제6회 한양대학교 프로그래밍 경시대회"
+title: "제6회 한양대학교 프로그래밍 경시대회"
 excerpt: "제6회 한양대학교 프로그래밍 경시대회 - Open Contest"
 toc: true
 toc_sticky: true
