--- a/_posts/2020-01-25-11.md
+++ b/_posts/2020-01-25-11.md
@@ -1,5 +1,5 @@
 ---
-title: "[Algorithm] Lower Bound와 Upper Bound"
+title: "Lower Bound와 Upper Bound"
 excerpt: "원소의 위치를 정하는 Lower Bound와 Upper Bound 알고리즘을 알아보자."
 toc: true
 toc_sticky: true
