--- a/_posts/2020-02-18-17.md
+++ b/_posts/2020-02-18-17.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 16978 수열과 쿼리 22"
+title: "백준 16978 수열과 쿼리 22"
 excerpt: "오프라인 쿼리로 풀 수 있는 수열과 쿼리"
 # toc: true
 # toc_sticky: true
