--- a/_posts/2020-03-02-24.md
+++ b/_posts/2020-03-02-24.md
@@ -1,5 +1,5 @@
 ---
-title: "[BOJ] 13925 수열과 쿼리 13"
+title: "백준 13925 수열과 쿼리 13"
 excerpt: "Lazy Propagation으로 풀 수 있는 수열과 쿼리"
 # toc: true
 # toc_sticky: true
