--- a/_posts/2020-07-01-42.md
+++ b/_posts/2020-07-01-42.md
@@ -1,6 +1,6 @@
 ---
 title: "안드로이드 동적 프로그레스 바"
-excerpt: "안드로이드에서 백그라운드 작업 중일때 동적으로 프로그레스 바를 만들어 보자."
+excerpt: "안드로이드에서 백그라운드 작업 중일때 동적으로 프로그레스 바를 만들어 보자"
 toc: true
 toc_sticky: true
 categories: [App]
