카테고리 수정: Android -> App

--- a/_posts/2021-02-07-79.md
+++ b/_posts/2021-02-07-79.md
@@ -3,7 +3,7 @@ title: "안드로이드 스튜디오 유닛 테스트 에러 Command line is too
 excerpt: "안드로이드 스튜디오에서 유닛테스트 시 Command line is too long... 에러 해결"
 toc: true
 toc_sticky: true
-categories: [Android]
+categories: [App]
 tags: [Android, Unit test]
 use_math: true
 ---
