--- a/_posts/2021-03-31-80.md
+++ b/_posts/2021-03-31-80.md
@@ -3,7 +3,7 @@ title: "안드로이드 ViewPager2 메모리 릭"
 excerpt: "안드로이드 Fragment에서 ViewPager2를 사용할 경우 메모리 릭 해결 방법"
 toc: true
 toc_sticky: true
-categories: [Android]
+categories: [App]
 tags: [Android]
 use_math: true
 ---
