--- a/_posts/2021-06-09-81.md
+++ b/_posts/2021-06-09-81.md
@@ -3,7 +3,7 @@ title: "카카오 인턴 합격 후기"
 excerpt: "카카오 안드로이드 인턴 합격 후기"
 toc: true
 toc_sticky: true
-categories: [Android]
+categories: [App]
 tags: [Android]
 use_math: true
 ---
